[gd_scene load_steps=23 format=2]

[ext_resource path="res://Entities/Enemies/rpgcritter update formatted transparent.png" type="Texture" id=1]
[ext_resource path="res://Entities/Enemies/Enemy.gd" type="Script" id=2]
[ext_resource path="res://Components/Stats.tscn" type="PackedScene" id=3]
[ext_resource path="res://Overlap/Hurtbox.tscn" type="PackedScene" id=4]
[ext_resource path="res://Overlap/DetectionArea.tscn" type="PackedScene" id=5]
[ext_resource path="res://Player/Shadow.png" type="Texture" id=6]

[sub_resource type="CapsuleShape2D" id=1]
radius = 2.2939
height = 3.27957

[sub_resource type="AtlasTexture" id=2]
atlas = ExtResource( 1 )
region = Rect2( 192, 32, 16, 32 )

[sub_resource type="AtlasTexture" id=3]
atlas = ExtResource( 1 )
region = Rect2( 208, 32, 16, 32 )

[sub_resource type="AtlasTexture" id=4]
atlas = ExtResource( 1 )
region = Rect2( 224, 32, 16, 32 )

[sub_resource type="AtlasTexture" id=5]
atlas = ExtResource( 1 )
region = Rect2( 192, 64, 16, 32 )

[sub_resource type="AtlasTexture" id=6]
atlas = ExtResource( 1 )
region = Rect2( 208, 64, 16, 32 )

[sub_resource type="AtlasTexture" id=7]
atlas = ExtResource( 1 )
region = Rect2( 224, 64, 16, 32 )

[sub_resource type="AtlasTexture" id=8]
atlas = ExtResource( 1 )
region = Rect2( 192, 96, 16, 32 )

[sub_resource type="AtlasTexture" id=9]
atlas = ExtResource( 1 )
region = Rect2( 208, 96, 16, 32 )

[sub_resource type="AtlasTexture" id=10]
atlas = ExtResource( 1 )
region = Rect2( 224, 96, 16, 32 )

[sub_resource type="AtlasTexture" id=11]
atlas = ExtResource( 1 )
region = Rect2( 192, 0, 16, 32 )

[sub_resource type="AtlasTexture" id=12]
atlas = ExtResource( 1 )
region = Rect2( 208, 0, 16, 32 )

[sub_resource type="AtlasTexture" id=13]
atlas = ExtResource( 1 )
region = Rect2( 224, 0, 16, 32 )

[sub_resource type="SpriteFrames" id=14]
animations = [ {
"frames": [ SubResource( 2 ), SubResource( 3 ), SubResource( 4 ) ],
"loop": true,
"name": "Up",
"speed": 5.0
}, {
"frames": [ SubResource( 5 ), SubResource( 6 ), SubResource( 7 ) ],
"loop": true,
"name": "Right",
"speed": 5.0
}, {
"frames": [ SubResource( 8 ), SubResource( 9 ), SubResource( 10 ) ],
"loop": true,
"name": "Left",
"speed": 5.0
}, {
"frames": [ SubResource( 11 ), SubResource( 12 ), SubResource( 13 ) ],
"loop": true,
"name": "Down",
"speed": 5.0
} ]

[sub_resource type="CapsuleShape2D" id=15]
radius = 3.22456
height = 3.53032

[sub_resource type="CircleShape2D" id=16]
radius = 45.6341

[node name="Enemy" type="KinematicBody2D"]
collision_layer = 64
collision_mask = 97
script = ExtResource( 2 )

[node name="Stats" parent="." instance=ExtResource( 3 )]
max_health = 4

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
modulate = Color( 1, 0, 0.0166664, 1 )
self_modulate = Color( 1, 0.607843, 0, 1 )
rotation = 1.5708
shape = SubResource( 1 )

[node name="Shadow" type="Sprite" parent="."]
position = Vector2( 0.668175, 1.1693 )
texture = ExtResource( 6 )

[node name="AnimatedSprite" type="AnimatedSprite" parent="."]
position = Vector2( 0.162, -5.594 )
scale = Vector2( 0.5, 0.5 )
frames = SubResource( 14 )
animation = "Down"
frame = 2
playing = true

[node name="Hurtbox" parent="." instance=ExtResource( 4 )]
position = Vector2( -0.0417137, -6.00678 )
collision_layer = 16
collision_mask = 2

[node name="CollisionShape2D" parent="Hurtbox" index="0"]
shape = SubResource( 15 )

[node name="DetectionArea" parent="." instance=ExtResource( 5 )]
modulate = Color( 0.505882, 1, 0.403922, 0.32549 )
show_behind_parent = true
collision_mask = 32

[node name="CollisionShape2D" parent="DetectionArea" index="0"]
shape = SubResource( 16 )

[connection signal="no_health" from="Stats" to="." method="_on_Stats_no_health"]
[connection signal="area_entered" from="Hurtbox" to="." method="_on_Hurtbox_area_entered"]
[connection signal="entity_list_changed" from="DetectionArea" to="." method="_on_DetectionArea_entity_list_changed"]

[editable path="Hurtbox"]
[editable path="DetectionArea"]
